Baseline before UI/UX Pro Max upgrade

--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.CPJb2jHI.js",
+    "file": "_app/immutable/entry/app.DE95rN4v.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -34,7 +34,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.DEt3sRwx.js",
+    "file": "_app/immutable/nodes/1.CTphlzOt.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -45,7 +45,7 @@
       "_DVK04YKT.js",
       "_B0YXN17V.js",
       "_BXXOYKxh.js",
-      "_CGwAGbhv.js"
+      "_D3vsWTgN.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -94,14 +94,6 @@
       "_DVK04YKT.js"
     ]
   },
-  "_CGwAGbhv.js": {
-    "file": "_app/immutable/chunks/CGwAGbhv.js",
-    "name": "entry",
-    "imports": [
-      "_DVK04YKT.js",
-      "_MJYWcbIC.js"
-    ]
-  },
   "_CYGZcSln.js": {
     "file": "_app/immutable/chunks/CYGZcSln.js",
     "name": "slot",
@@ -116,6 +108,14 @@
       "_DVK04YKT.js"
     ]
   },
+  "_D3vsWTgN.js": {
+    "file": "_app/immutable/chunks/D3vsWTgN.js",
+    "name": "entry",
+    "imports": [
+      "_DVK04YKT.js",
+      "_MJYWcbIC.js"
+    ]
+  },
   "_DVK04YKT.js": {
     "file": "_app/immutable/chunks/DVK04YKT.js",
     "name": "runtime"
@@ -128,12 +128,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.DV3Ji9MW.js",
+    "file": "_app/immutable/entry/start.DmE2H73B.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_CGwAGbhv.js"
+      "_D3vsWTgN.js"
     ]
   }
 }
