Prototype scraper cron + BLS ETL (177k records JSON + Netlify func)

--- a/package.json
+++ b/package.json
@@ -36,6 +36,13 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "chart.js": "^4.5.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "clsx": "^2.1.1",
+    "lucide-svelte": "^0.563.0",
+    "svelte-chartjs": "^3.1.5",
+    "tailwind-merge": "^3.4.0",
+    "type-fest": "^5.4.3",
     "zod": "^3.23.8"
   },
   "type": "module"
