--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.3.1",
+    "@sveltejs/adapter-netlify": "^5.2.4",
     "@sveltejs/kit": "^2.50.2",
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
     "@tailwindcss/forms": "^0.5.9",
@@ -36,6 +37,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "adm-zip": "^0.5.16",
+    "csv-parse": "^6.1.0",
+    "googleapis": "^171.4.0",
+    "stripe": "^20.3.1",
     "zod": "^3.23.8"
   },
   "type": "module"
