--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "lint": "prettier --plugin-search-dir .prettierrc --check . && eslint .",
     "format": "prettier --plugin-search-dir .prettierrc --write ."
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.3.1",
     "@sveltejs/adapter-netlify": "^5.2.4",
