--- a/package.json
+++ b/package.json
@@ -1,50 +1,32 @@
 {
   "name": "avgpay-rebuild",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push",
-    "prisma:migrate": "prisma migrate dev",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir .prettierrc --check . && eslint .",
-    "format": "prettier --plugin-search-dir .prettierrc --write ."
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.3.1",
-    "@sveltejs/adapter-netlify": "^5.2.4",
-    "@sveltejs/kit": "^2.50.2",
-    "@sveltejs/vite-plugin-svelte": "^6.0.0",
-    "@tailwindcss/forms": "^0.5.9",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^10.1.0",
-    "eslint-plugin-svelte": "^3.4.1",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "prettier-plugin-svelte": "^3.4.1",
-    "prisma": "^5.22.0",
-    "svelte": "^5.49.2",
-    "svelte-check": "^4.3.6",
-    "tailwindcss": "^3.4.17",
-    "tslib": "^2.6.2",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.8"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "adm-zip": "^0.5.16",
-    "csv-parse": "^6.1.0",
-    "googleapis": "^171.4.0",
-    "stripe": "^20.3.1",
-    "zod": "^3.23.8"
+    "@prisma/client": "^7.3.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
+    "next": "14.2.35",
+    "prisma": "^7.3.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "recharts": "^3.7.0",
+    "tailwind-merge": "^3.4.0"
   },
-  "type": "module"
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.35",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
