--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^7.3.0",
+    "@supabase/supabase-js": "^2.95.3",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
     "next": "14.2.35",
@@ -26,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.35",
     "postcss": "^8",
+    "supabase": "^2.76.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
