Lint/deploy fix - prod live

--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,15 +1,15 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.DE95rN4v.js",
+    "file": "_app/immutable/entry/app.DVbAhD_T.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
     "imports": [
-      "_DVK04YKT.js",
-      "_B0YXN17V.js",
-      "_7ngLpJeM.js",
-      "_MJYWcbIC.js",
-      "_CeUKV5iP.js"
+      "_CKEiQQoQ.js",
+      "_DxH_EOr7.js",
+      "_M5I39Feb.js",
+      "_CiMh2UvX.js",
+      "_DqGQ8CU-.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/client-optimized/nodes/0.js",
@@ -18,122 +18,122 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.DKtnD7af.js",
+    "file": "_app/immutable/nodes/0.Cd_h3YA5.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_7ngLpJeM.js",
-      "_C2zA0EPV.js",
-      "_DVK04YKT.js",
-      "_CYGZcSln.js"
+      "_M5I39Feb.js",
+      "_B1XuwVkx.js",
+      "_CKEiQQoQ.js",
+      "_CJv1sLTc.js"
     ],
     "css": [
-      "_app/immutable/assets/0.CMIpiC8F.css"
+      "_app/immutable/assets/0.DZBgdEPL.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.CTphlzOt.js",
+    "file": "_app/immutable/nodes/1.lbMn5L22.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_7ngLpJeM.js",
-      "_C2zA0EPV.js",
-      "_DVK04YKT.js",
-      "_B0YXN17V.js",
-      "_BXXOYKxh.js",
-      "_D3vsWTgN.js"
+      "_M5I39Feb.js",
+      "_B1XuwVkx.js",
+      "_CKEiQQoQ.js",
+      "_DxH_EOr7.js",
+      "_Bgj5I_XQ.js",
+      "_C8xHeVE6.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.HfJw-JZF.js",
+    "file": "_app/immutable/nodes/2.C8URUf2W.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_7ngLpJeM.js",
-      "_C2zA0EPV.js",
-      "_MJYWcbIC.js",
-      "_DVK04YKT.js",
-      "_CeUKV5iP.js",
-      "_BXXOYKxh.js",
-      "_B0YXN17V.js",
-      "_CYGZcSln.js"
+      "_M5I39Feb.js",
+      "_B1XuwVkx.js",
+      "_CiMh2UvX.js",
+      "_CKEiQQoQ.js",
+      "_DqGQ8CU-.js",
+      "_Bgj5I_XQ.js",
+      "_DxH_EOr7.js",
+      "_CJv1sLTc.js"
     ]
   },
-  "_7ngLpJeM.js": {
-    "file": "_app/immutable/chunks/7ngLpJeM.js",
-    "name": "disclose-version",
-    "imports": [
-      "_DVK04YKT.js"
-    ]
-  },
-  "_B0YXN17V.js": {
-    "file": "_app/immutable/chunks/B0YXN17V.js",
-    "name": "render",
-    "imports": [
-      "_DVK04YKT.js",
-      "_7ngLpJeM.js"
-    ]
-  },
-  "_BXXOYKxh.js": {
-    "file": "_app/immutable/chunks/BXXOYKxh.js",
-    "name": "lifecycle",
-    "imports": [
-      "_DVK04YKT.js"
-    ]
-  },
-  "_C2zA0EPV.js": {
-    "file": "_app/immutable/chunks/C2zA0EPV.js",
+  "_B1XuwVkx.js": {
+    "file": "_app/immutable/chunks/B1XuwVkx.js",
     "name": "legacy",
     "imports": [
-      "_DVK04YKT.js"
+      "_CKEiQQoQ.js"
     ]
   },
-  "_CYGZcSln.js": {
-    "file": "_app/immutable/chunks/CYGZcSln.js",
-    "name": "slot",
+  "_Bgj5I_XQ.js": {
+    "file": "_app/immutable/chunks/Bgj5I_XQ.js",
+    "name": "lifecycle",
     "imports": [
-      "_DVK04YKT.js"
+      "_CKEiQQoQ.js"
     ]
   },
-  "_CeUKV5iP.js": {
-    "file": "_app/immutable/chunks/CeUKV5iP.js",
-    "name": "props",
-    "imports": [
-      "_DVK04YKT.js"
-    ]
-  },
-  "_D3vsWTgN.js": {
-    "file": "_app/immutable/chunks/D3vsWTgN.js",
+  "_C8xHeVE6.js": {
+    "file": "_app/immutable/chunks/C8xHeVE6.js",
     "name": "entry",
     "imports": [
-      "_DVK04YKT.js",
-      "_MJYWcbIC.js"
+      "_CKEiQQoQ.js",
+      "_CiMh2UvX.js"
     ]
   },
-  "_DVK04YKT.js": {
-    "file": "_app/immutable/chunks/DVK04YKT.js",
+  "_CJv1sLTc.js": {
+    "file": "_app/immutable/chunks/CJv1sLTc.js",
+    "name": "slot",
+    "imports": [
+      "_CKEiQQoQ.js"
+    ]
+  },
+  "_CKEiQQoQ.js": {
+    "file": "_app/immutable/chunks/CKEiQQoQ.js",
     "name": "runtime"
   },
-  "_MJYWcbIC.js": {
-    "file": "_app/immutable/chunks/MJYWcbIC.js",
+  "_CiMh2UvX.js": {
+    "file": "_app/immutable/chunks/CiMh2UvX.js",
     "name": "index-client",
     "imports": [
-      "_DVK04YKT.js"
+      "_CKEiQQoQ.js"
+    ]
+  },
+  "_DqGQ8CU-.js": {
+    "file": "_app/immutable/chunks/DqGQ8CU-.js",
+    "name": "props",
+    "imports": [
+      "_CKEiQQoQ.js"
+    ]
+  },
+  "_DxH_EOr7.js": {
+    "file": "_app/immutable/chunks/DxH_EOr7.js",
+    "name": "render",
+    "imports": [
+      "_CKEiQQoQ.js",
+      "_M5I39Feb.js"
+    ]
+  },
+  "_M5I39Feb.js": {
+    "file": "_app/immutable/chunks/M5I39Feb.js",
+    "name": "disclose-version",
+    "imports": [
+      "_CKEiQQoQ.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.DmE2H73B.js",
+    "file": "_app/immutable/entry/start.D48CEc-a.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_D3vsWTgN.js"
+      "_C8xHeVE6.js"
     ]
   }
 }
