--- a/.svelte-kit/output/server/.vite/manifest.json
+++ b/.svelte-kit/output/server/.vite/manifest.json
@@ -104,7 +104,7 @@
       "_index.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout.CMIpiC8F.css"
+      "_app/immutable/assets/_layout.DZBgdEPL.css"
     ]
   },
   "src/routes/+page.svelte": {
