--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "prisma:migrate": "prisma migrate dev",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir .prettierrc --check . && eslint .",
-    "format": "prettier --plugin-search-dir .prettierrc --write ."
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.3.1",
     "@sveltejs/kit": "^2.50.2",
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/node": "^25.2.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^10.1.0",
@@ -32,7 +33,7 @@
     "tailwindcss": "^3.4.17",
     "tslib": "^2.6.2",
     "typescript": "^5.6.2",
-    "vite": "^5.4.8"
+    "vite": "^6.4.1"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
