--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "react/jsx-no-undef": "off",
+    "react/no-unescaped-entities": "warn",
+    "@next/next/no-img-element": "off",
+    "@typescript-eslint/no-unused-vars": "warn"
+  }
 }
