--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@prisma/client": "^7.3.0",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.95.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.33.0",
     "lucide-react": "^0.563.0",
     "next": "14.2.35",
     "prisma": "^7.3.0",
