--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^7.3.0",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.95.3",
     "class-variance-authority": "^0.7.1",
