feat: Implement core application pages and API routes, update dependencies, and remove development artifacts.

--- a/.env
+++ b/.env
@@ -16,3 +16,6 @@ DIRECT_URL="postgresql://postgres:Kn6pLWyZqu4%21I%23u5@db.qkpdeeizgpapmukqfptx.s
 # PostHog Analytics
 NEXT_PUBLIC_POSTHOG_KEY="phc_..."
 NEXT_PUBLIC_POSTHOG_HOST="https://us.i.posthog.com"
+
+# Optional: Analytics
+NEXT_PUBLIC_GA_ID=G-W5ZWLZBNQB
