--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build && node scripts/generate-sitemap.js",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check:links": "node scripts/check-internal-links.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
