--- a/.env
+++ b/.env
@@ -19,3 +19,6 @@ NEXT_PUBLIC_POSTHOG_HOST="https://us.i.posthog.com"
 
 # Optional: Analytics
 NEXT_PUBLIC_GA_ID=G-W5ZWLZBNQB
+
+# Gemini API
+GEMINI_API_KEY="AIzaSyC6uJlJ-b-BGlPhY2QUECN954LEYzUVg8c"
