--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
   "crons": [
     {
       "path": "/api/cron/process-enrichment?limit=3",
-      "schedule": "*/5 * * * *"
+      "schedule": "0 3 * * *"
     },
     {
       "path": "/api/cron/backfill-enrichment?limit=25",
-      "schedule": "*/15 * * * *"
+      "schedule": "0 4 * * *"
     }
   ]
 }
