--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build && node scripts/generate-sitemap.js",
     "start": "next start",
     "lint": "next lint",
-    "check:links": "node scripts/check-internal-links.js"
+    "check:links": "node scripts/check-internal-links.js",
+    "audit:deps": "node scripts/audit-dependencies.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
